[project]
name = "kzb"
version = "0.1.0"
description = "Kol-Zchut bot data processing and RAG pipeline"
authors = [
  { name = "Kol-Zchut Bot" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.34",
  "numpy>=1.26",
  "safetensors>=0.4",
  "sentencepiece>=0.1.99",
  "torch>=2.4",
  "transformers>=4.44",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
